--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -23,8 +23,8 @@ http {
 	default_type application/octet-stream;
 	sendfile on;
 
-	#Must read the body in 5 seconds.
-	client_body_timeout 5;
+	#Must read the body in 15 seconds.
+	client_body_timeout <%= ENV['NGINX_CLIENT_BODY_TIMEOUT'] || 15 %>;
 
 	upstream app_server {
 		server unix:/tmp/nginx.socket fail_timeout=0;
@@ -33,7 +33,7 @@ http {
 	server {
 		listen <%= ENV["PORT"] %>;
 		server_name _;
-		keepalive_timeout 5;
+		keepalive_timeout <%= ENV['NGINX_KEEPALIVE'] || 15 %>;
 
 		location / {
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
